<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">J_Weaver_ConentProvider_Labfive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="formButton">Add New</string>
    <string name="back_button">Back</string>
    <string name="form_title">WHERE U GO SKOOL</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="school_name">School Name</string>
    <string name="save_button">Save</string>
    <string name="displayName">Name:</string>
    <string name="details_title">DIS WHERE THEY GO SKOOL</string>
    <string name="delete_button">Delete</string>
    <string name="schoolName">School:</string>


</resources>
